<resources>
    <!-- App Info -->
    <string name="app_name">banchan</string>

    <!-- ToolBar title -->
    <string name="toolbar_title_ordering">ORDERING</string>
    <string name="toolbar_title_cart">Cart</string>
    <string name="toolbar_title_recent">Recently viewed products</string>
    <string name="toolbar_title_order">Order List</string>

    <!--fragment tag-->
    <string name="fragment_best">best</string>
    <string name="fragment_main">main</string>
    <string name="fragment_soup">soup</string>
    <string name="fragment_side">side</string>
    <string name="fragment_cart_add">cartAdd</string>
    <string name="fragment_cart_complete">cartComplete</string>
    <string name="fragment_cart_update">cartUpdate</string>
    <string name="fragment_cart">cart</string>
    <string name="fragment_recent">recent</string>

    <!--Home Header Title-->
    <string name="badge">기획전</string>
    <string name="home_header_best_title">한 번 주문하면\n두 번 반하는 반찬들</string>
    <string name="home_header_main_title">모두가 좋아하는\n든든한 메인 요리</string>
    <string name="home_header_soup_title">정성이 담긴\n뜨끈뜨끈 국물 요리</string>
    <string name="home_header_side_title">식탁을 풍성하게 하는\n정갈한 밑반찬</string>

    <!--Products Detail Screen-->
    <string name="detail_point_label">적립금</string>
    <string name="detail_delivery_info_label">배송정보</string>
    <string name="detail_delivery_fee_label">배송비</string>
    <string name="detail_count_label">수량</string>
    <string name="detail_total_price">총 주문금액</string>
    <string name="detail_order">주문하기</string>

    <!--Dialog Screen-->
    <string name="dialog_bottomSheet_title">장바구니 담기</string>
    <string name="dialog_bottomSheet_cancel">취소</string>
    <string name="dialog_title">선택한 상품이 장바구니에 담겼습니다.</string>
    <string name="dialog_continue_shopping">계속 쇼핑하기</string>
    <string name="dialog_cart_confirm">장바구니 확인</string>
    <string name="dialog_cart_update_title">이미 장바구니에 있습니다. 변경하시겠습니까?</string>
    <string name="dialog_update_cancel">취소</string>
    <string name="dialog_update_confirm">확인</string>

    <!--Order Screen-->
    <string name="order_delivery_complete">배송완료</string>
    <string name="order_delivery_ready">배송 준비중</string>
    <string name="order_complete">주문이 접수되었습니다.</string>
    <string name="order_delivery_complete_long">배송이 완료되었습니다.</string>
    <string name="order_delivery_time">배송까지 남은 시간</string>
    <string name="order_ordered_item">주문한 상품</string>
    <string name="order_name">order</string>
    <string name="order_channel">orderChannel</string>
    <string name="order_channel_id">411</string>
    <string name="order_id">orderId</string>
    <string name="order_title">orderTitle</string>
    <string name="order_content">배송이 완료되었습니다.</string>

    <!-- Error text -->
    <string name="error_text">네트워크에 문제가 발생했습니다!</string>
    <string name="error_refresh">다시 불러오기</string>
    <string name="empty_notice">상품이 비어있습니다!</string>
    <string name="error_item_count_overflow">1~100 까지의 숫자를 입력하세요</string>
    <string name="error_minimum_price">최소주문금액을 확인해주세요</string>

    <!--String Formatting-->
    <string name="total_count">총 %d개 상품</string>
    <string name="add_cart">%d개 담기</string>
    <string name="order_total_count">총 %d개</string>
    <string name="order_item_count">%d개</string>
    <string name="order_left_minute">%d분</string>
    <string name="order_minute">분</string>

    <!--Cart Screen-->
    <string name="cart_selection_release">선택 해제</string>
    <string name="cart_selection_all">전체 선택</string>
    <string name="cart_selection_remove">선택 삭제</string>
    <string name="cart_preview_recent">최근 본 상품</string>
    <string name="cart_view_recent_all">전체보기</string>
    <string name="order_ordered_items_price">상품 주문 금액</string>
    <string name="order_shipping_price">배송료</string>
    <string name="order_total_price">총 주문 금액</string>

    <!--text view extension-->
    <string name="text_view_price_format_lan">원</string>
    <string name="text_view_notice_free_shipping">을 더 담으면 무료배송!</string>
    <string name="text_view_order_summary">%s 외 %d개</string>
    <string name="text_view_order">주문하기</string>

    <!--Home Tab List-->
    <string name="home_tab_best">기획전</string>
    <string name="home_tab_main">든든한 메인요리</string>
    <string name="home_tab_soup">뜨끈한 국물요리</string>
    <string name="home_tab_side">정갈한 밑반찬</string>

    <!--Sorting criteria List-->
    <string name="spinner_criterion_default">기본 정렬순</string>
    <string name="spinner_criterion_price_high">금액 높은순</string>
    <string name="spinner_criterion_price_low">금액 낮은순</string>
    <string name="spinner_criterion_discount">할인율순</string>
</resources>