<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="checkStateFlag"
            type="Boolean" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/tv_release_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="@{checkStateFlag ? View.VISIBLE : View.GONE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_checked" />

            <TextView
                style="@style/normal_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart_selection_release" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tv_all_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="@{checkStateFlag ? View.GONE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_unchecked" />

            <TextView
                style="@style/normal_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart_selection_all" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_remove_selection"
            style="@style/normal_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_selection_remove"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>